[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player_Movement.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player/Player_Stats.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Player/Player-Attack.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.19332, 6.9826 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.44822, 6.125 )

[sub_resource type="Animation" id=4]
resource_name = "Attack_Player"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 7.95282, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Attack_Area/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk_Player"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="KinematicBody2D" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 0.176781, 0 )
script = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -31.0
margin_top = -48.0
margin_right = 40.0
margin_bottom = -32.0
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="Dash Area" type="Area2D" parent="." groups=[
"player",
]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Dash Area"]
position = Vector2( 1.32936, -4.0721 )
scale = Vector2( 0.32449, 0.356317 )
polygon = PoolVector2Array( -46.6487, -31.4695, 45.8144, -31.9885, 45.9912, 31.0639, -47.2733, 31.6543 )

[node name="player_collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Attack_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Area"]
position = Vector2( 13.2735, 0 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack_Player = SubResource( 4 )
anims/Walk_Player = SubResource( 3 )
[connection signal="area_entered" from="Dash Area" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Dash Area" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Attack_Area" to="." method="_on_Attack_Area_area_entered"]
